# final-year-project

./: .gitignore  ChangeLog  Makefile.in  NEWS  README  README.md  config.h.in  configure
code/: AUTHORS  ChangeLog  Makefile  NEWS  README  README.md  configure.ac  estimator.h  estimatorIWLS.c  estimator_IWLS.c  estimator_baseline.c  estimator_piecewise.c  file_util.c  file_util.h  general_util.c  general_util.h  generator.c  generator.h  ln_plot.sh  math_util.c  math_util.h  paramlist.c  params.txt  pc_plot.sh  pi_plot.sh  plot.sh  plotmaster.sh  poisson.man  start.c  twostreambins.plt  twostreambins.sh
code/data/: exp_params.txt  params.txt
code/lib/: Makefile.am  file_util.c  generator.h  paramlist.c
code/plots/: blplot.plt  impulse_plot.plt  lnplot.plt  pcplot.plt
code/plots/tests/: calltest.gp  test.gp  test.sh
code/prototypes/: Makefile  estimator.h  estimatorIWLS.c  file_out.c  file_util.c  file_util.h  general_util.c  general_util.h  generator.c  generator.h  impulse_plot.plt  math_functions.c  math_util.c  math_util.h  output_data.c  p_func.c  paramlist.c  poisson.c  poisson.h  poisson_generator.c  poisson_random.h  start.c
code/prototypes/lib/: estimator.h  poisson.h
code/prototypes/plots/: rolling_plot.plt
code/prototypes/src/: estimatorIWLS.c  file_util.c  generator.c  start.c  util.c
code/scripts/: bl_plot.sh  ln_plot.sh  pc_plot.sh  plotmaster.sh  twostreambins.sh
code/src/: Makefile.am  combinefunction.c  combinefunction.h  defparams.h  estimator.c  estimator.h  estimator_IWLS.c  estimator_baseline.c  estimator_delay.c  estimator_delta.c  estimator_gaussian.c  estimator_piecewise.c  experimenter.c  experimenter.h  file_util.c  file_util.h  general_util.c  general_util.h  generator.c  generator.h  launcher.c  launcher.h  math_util.c  math_util.h  paramlist.c  paramlist.h  start.c  struct.h
code/tests/: Makefile.am  check_combinefunction.c  check_estimator.c  check_experimenter.c  check_file_util.c  check_general_util.c  check_math_util.c  check_paramlist.c  testmain.c  tests.h
data/: exp_params.txt  params.txt
docs/SET_summary/: summary.org  summary.tex
docs/final_pres/: baseline_area.txt  baseline_pmf.txt  final.tex  gaussian_area.txt  gaussian_pmf.txt
docs/inspection_pres/: inspection.tex
docs/proposal/: project_proposal.tex  proposal_refs.bib
docs/report/: fyp.bib  report.org  report.tex
docs/report/data/basic_piecewise/: est_out.txt  info.txt  output.txt_stream_0_ad
docs/report/data/min_interval_length/: alldata.txt  eventonly.txt  min_limit_est.txt  min_nonlimit_est.txt
plots/: allplot.plt  area.plt  blplot.plt  combplot.plt  contrib.plt  error.plt  estbins.plt  kern.plt  lnplot.plt  multiest.plt  multiplot.plt  orig.plt  pcplot.plt  twostreams.plt  undef.plt
scripts/: exprun.sh  extract_results.sh  genfunc_def.sh  get_goodness.sh  make_meantable.sh  plot.sh  plotmaster.sh  run_order.txt  runexp_batch.sh  runtd_exp.sh  stutter_batch.sh  tabulate_results.sh  ttest.m  ttest_columnate.sh  ttest_random.cws  ttest_random.m  ttest_sine.cws  ttest_sine.m  ttest_sine_fine.cws  ttest_sine_prelim.cws
scripts/randfunc/: extract_results.sh  genfunc_def.sh  genfunc_rand.sh  get_goodness.sh  multifunc_errmean.sh  multifunc_mean.sh  plotmaster.sh  runexp_batch.sh  runtd_exp.sh  stutter_batch.sh  ttest_columnate.sh  ttest_columnate_agg.sh  ttest_columnate_individual.sh
src/: Makefile.am  Makefile.in  combinefunction.c  combinefunction.h  defparams.h  estimator.c  estimator.h  estimator_IWLS.c  estimator_delta.c  estimator_gaussian.c  estimator_piecewise.c  experimenter.c  experimenter.h  file_util.c  file_util.h  general_util.c  general_util.h  generator.c  generator.h  launcher.c  launcher.h  math_util.c  math_util.h  paramlist.c  paramlist.h  struct.h  ttest.cpp
tests/: Makefile.in  check_combinefunction.c  check_file_util.c  check_general_util.c  check_paramlist.c
tests/files/: testdata.txt  testparam.txt
